# rover-ros2

./: .env  .envrc  .gitignore  .gitmodules  README.md  anchor.service  arm_launch.py  core_headless.service  docker-compose.yml  flake.nix  headless_full.service  overlay.nix  rover_launch.py  shell.nix  treefmt.nix
.github/workflows/: check.yml
anchor_pkg/: setup.cfg  setup.py
anchor_pkg/launch/: rover.launch.py
auto_start/: auto_start_anchor.sh  auto_start_core_headless.sh  auto_start_headless_full.sh  start_rosbag.sh
bio_pkg/: setup.py
bio_pkg/bio_pkg/: bio_node.py
core_pkg/: package.xml  setup.py
core_pkg/core_pkg/: core_node.py  core_ptz.py
core_pkg/core_pkg/siyi_sdk/: siyi.py
headless_pkg/: setup.cfg  setup.py
launch/: rover_launch.py
scripts/: reset-repo.bash  test-connectors.bash
src/anchor_pkg/: package.nix  package.xml  setup.cfg  setup.py
src/anchor_pkg/anchor_pkg/: anchor_node.py  connector.py  convert.py
src/anchor_pkg/launch/: rover.launch.py
src/anchorc/: CMakeLists.txt  package.xml
src/anchorc/src/: anchor.cpp
src/arm_description/: package.xml  setup.py
src/arm_description/meshes/: Axis_0_Plate.STL  Wrist.STL
src/arm_description/urdf/: ASTRA_Arm.csv  ASTRA_Arm.urdf
src/arm_hardware_controller/: CMakeLists.txt  arm_hardware_controller.xml  package.xml
src/arm_hardware_controller/hardware/: arm_controller.cpp
src/arm_hardware_controller/hardware/include/arm_hardware_controller/: arm_controller.hpp
src/arm_moveit_config/: .setup_assistant  package.xml
src/arm_moveit_config/config/: ASTRA_Arm.ros2_control.xacro  ASTRA_Arm.urdf.xacro  astra_arm_simulated_config.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/arm_pkg/: package.nix  package.xml  setup.cfg  setup.py
src/arm_pkg/arm_pkg/: arm_headless.py  arm_node.py  arm_relay_node.py  arm_relay_node.py.bkp  astra_arm.py  feedback_storage.py
src/arm_pkg/urdf/: Segment 1.STL  arm12.urdf
src/astra_arm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/astra_arm_moveit_config/config/: ASTRA_Arm.ros2_control.xacro  ASTRA_Arm.srdf  ASTRA_Arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
src/astra_arm_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/astra_description/core_description/: package.xml  setup.py
src/astra_description/core_description/config/: joint_names_core_rover_description.yaml  ros2_controllers.yaml
src/astra_description/core_description/launch/: display.launch.py  robot_state_publisher.launch.py
src/astra_description/core_description/meshes/: fr_wheel.STL  left_suspension_member.STL  right_suspension_member.STL
src/astra_description/core_description/urdf/: core_description.csv  core_rover.urdf  ros2_control.xacro
src/astra_description/core_gazebo/: package.xml
src/astra_description/core_gazebo/launch/: core.gazebo.launch.py
src/astra_description/core_rover_description/: package.xml  setup.py
src/astra_description/core_rover_description/launch/: display.launch.py  robot_state_publisher.launch.py
src/astra_description/core_rover_description/meshes/: br_wheel.STL
src/astra_description/core_rover_description/urdf/: core_rover.urdf  core_rover_description.csv
src/bio_pkg/: package.nix  package.xml  setup.cfg  setup.py
src/bio_pkg/bio_pkg/: bio_node.py
src/core_gazebo/: CMakeLists.txt  package.xml
src/core_gazebo/launch/: core.gazebo.launch.py
src/core_gazebo/worlds/: pick_and_place_demo.world
src/core_pkg/: package.nix  package.xml  setup.cfg  setup.py
src/core_pkg/core_pkg/: core_headless.py  core_node.py  core_ptz.py
src/core_pkg/core_pkg/siyi_sdk/: siyi.py  test.py
src/core_rover_description/: package.xml  setup.cfg
src/core_rover_description/config/: ros2_controllers.yaml  rviz_basic_settings.rviz
src/core_rover_description/launch/: display.launch.py  load_ros2_controllers.launch.py  robot_state_publisher.launch.py
src/core_rover_description/meshes/: averaging_bar.STL  bl_wheel.STL  fl_wheel.STL
src/core_rover_description/urdf/: core_rover.urdf  core_rover_description.urdf  core_rover_description.xacro  ros2_control.xacro
src/headless_arm_pkg/: package.xml  setup.cfg  setup.py
src/headless_arm_pkg/headless_arm_pkg/: headless_arm_ctrl_node.py
src/headless_pkg/: package.nix  package.xml  setup.py
src/headless_pkg/src/: headless_node.py
src/latency_tester/: CMakeLists.txt  package.nix  package.xml
src/latency_tester/src/: embedded_ping.cpp
src/moveit_servo/: CMakeLists.txt  package.xml
src/moveit_servo/launch/: servo.launch.py
src/ros2_interfaces_pkg/: CMakeLists.txt  README.md  package.xml
src/ros2_interfaces_pkg/action/: AutoCommand.action
src/ros2_interfaces_pkg/msg/control/: ArmIK.msg  ArmManual.msg  ControllerState.msg  CoreControl.msg
src/ros2_interfaces_pkg/msg/feedback/: AutoFeedback.msg  CoreFeedback.msg  DigitFeedback.msg  FaerieFeedback.msg  SocketFeedback.msg
src/rover_urdf_pkg/: CMakeLists.txt  package.xml  setup.py
src/rover_urdf_pkg/config/: joint_names_URDF v2 - axes added.yaml
src/rover_urdf_pkg/launch/: display.launch  gazebo.launch
src/rover_urdf_pkg/meshes/: Diff Carrier.STL  EF Gripper Right.STL  EF_Gripper_Left.STL  End Effector.STL  base_link.STL
src/rover_urdf_pkg/urdf/: ASTRA Arm.csv  ASTRA Arm.urdf  ASTRA_Arm.csv  ASTRA_Arm.urdf
src/servo_arm_twist_pkg/: CMakeLists.txt  package.nix  package.xml
src/servo_arm_twist_pkg/src/: joystick_twist.cpp
systemd/: anchor.service  astra_rosbag.service  headless_full.service
tests/: auto_debug.py
