<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>core_pkg</name>
  <version>1.0.0</version>
  <description>Relays topics related to Core between VicCAN (through Anchor) and basestation.</description>
  <maintainer email="ds0196@uah.edu">David Sharpe</maintainer>
  <license>AGPL-3.0-only</license>

  <depend>rclpy</depend>

  <exec_depend>common_interfaces</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  <exec_depend>python-crccheck-pip</exec_depend>

  <exec_depend>astra_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
