<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>anchor_pkg</name>
  <version>0.0.0</version>
  <description>Anchor -- ROS and CAN relay node</description>
  <maintainer email="rjm0037@uah.edu">Riley</maintainer>
  <license>AGPL-3.0-only</license>

  <depend>rclpy</depend>
  <depend>common_interfaces</depend>
  <depend>python3-serial</depend>
  <depend>python3-can</depend>

  <build_depend>black</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
