<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>arm_description</name>
  <version>1.0.0</version>
  <description>This package contains configuration data, 3D models and launch files for Clucky's arm</description>
  <maintainer email="ds0196@uah.edu">David Sharpe</maintainer>
  <license>BSD</license>

  <depend>rclpy</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
