<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>headless_pkg</name>
  <version>1.0.0</version>
  <description>Headless rover control package to handle command interpretation and embedded interfacing.</description>
  <maintainer email="ds0196@uah.edu">tristan</maintainer>
  <license>All Rights Reserved</license>

  <depend>rclpy</depend>
  <depend>ros2_interfaces_pkg</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
