<package format="2">
  <name>rover_urdf_pkg</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Clucky's arm</p>
    <p>This package contains configuration data, 3D models and launch files
for Clucky's arm</p>
  </description>
  <author>David Sharpe</author>
  <maintainer email="ds0196@uah.edu" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package>